--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@igloohr/hitomezashi",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Simple javascript class for generating hitomezashi stitch pattern svg backgrounds",
   "main": "hitomezashi.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,7 @@
   },
   "keywords": ["hitomezashi", "svg", "background"],
   "author": "Kristijan Šimenić",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ksimenic/hitomezashi/issues"
   },
